# MonoAotSample

./: .gitignore  CMakeLists.txt  Class1.cs  MyApp  README.md  backup.cpp  build.md  build.sh  chatgpt.md  configure.sh  export_aot.c  flags.md  libcompile.sh  libme.md  linuxme.sh  main.cpp  mono_crash.0.0.json  mono_crash.0.1.json  mono_crash.0.2.json  mono_crash.0.3.json  mono_crash.0.4.json  mono_crash.0.5.json  mono_crash.0.6.json  mono_crash.0.7.json  mono_crash.0.8.json  run.cmake.sh  run.sh  test.md
